--- a/report/report.tex
+++ b/report/report.tex
@@ -62,6 +62,11 @@
 \Crefname{algocf}{Algorithm}{Algorithms}
 \crefname{algocfline}{line}{lines}
 \Crefname{algocfline}{Line}{Lines}
+\crefname{enumi}{step}{steps}
+\Crefname{enumi}{Step}{Steps}
+
+%Layout
+\usepackage{enumerate}
 
 % Temp
 \usepackage[obeyFinal]{todonotes}
