--- a/report/method.tex
+++ b/report/method.tex
@@ -118,7 +118,7 @@ Before springs can be broken the system of particles and springs needs to be sta
 
 In this section we briefly review the differences between the two models that are described in \cref{ss:method:model} and \cref{ss:method:vogel}. 
 
-\rick{Ours is fast, but does not model what it is supposed to model, but a it is a nice simulation of a breaking balloon vs Vogel who build an ultra slow but correct model of the desiccation of mud. You decide which is more fun :D. Ik had hier meer iets in gedachten dat de verschillen tussen die modellen bespreekt. Vogel heeft massless particles, maar veren hebben geen natuurlijke lengte van nul, dat soort blaat. Denk dat dat hier relevanter is. We noemen in de inleiding al waarom we dit model gebouwd hebben, anders dan het moest ;-). En in de conclusie kunnen we wel bekijken welke van de twee modellen het leukst is.}
+\rick{Ours is fast, but does not model what it is supposed to model, but a it is a nice simulation of a breaking balloon vs Vogel who build an ultra slow but correct model of the desiccation of mud. You decide which is more fun :D. Ik had hier meer iets in gedachten dat de verschillen tussen die modellen bespreekt. Vogel heeft massless particles, maar veren hebben geen natuurlijke lengte van nul, dat soort blaat. Denk dat dat hier relevanter is. We noemen in de inleiding al waarom we dit model gebouwd hebben, anders dan het moest ;-). En in de conclusie kunnen we wel bekijken welke van de twee modellen het leukst is. Dus eignelijk de todos die hieronder staan. }
 
 \todo[inline]{Describe the important differences of the two models.}
 
