Bestanden met resultaten.

--- a/report/experiment.tex
+++ b/report/experiment.tex
@@ -20,3 +20,17 @@
 	\caption{Several steps of the breaking of springs, where the springs with a strain greater than 1.04 were broken. The grid had 1200 particles, the spring constants were sampled from a normal distribution with mean 0.0 and standard deviation 1.0. Step 0 is a stabilization of the initial grid, presented in \cref{fig:implementation:stabilizedInitial}, the following steps are the stabilization and breaking steps of the algorithm.}
 	\label{fig:experiment:greaterThanStrain}
 \end{figure*}
+
+\begin{figure*}
+	\centering
+	\input{results_stretchGreater}					
+	\caption{Several steps of the stretching of springs, $\vartheta = 0.1$, where the springs with a strain greater than 1.04 were stretched. The grid had 1200 particles, the spring constants were sampled from a normal distribution with mean 0.0 and standard deviation 1.0. Step 0 is a stabilization of the initial grid, presented in \cref{fig:implementation:stabilizedInitial}, the following steps are the stabilization and breaking steps of the algorithm.}
+	\label{fig:experiment:stretchGreaterThanStrain}
+\end{figure*}
+
+\begin{figure*}
+	\centering
+	\input{results_stretchHighest}					
+	\caption{Several steps of the stretching of springs, $\vartheta = 0.1$, where the 97 springs with the highest strain were stretched. The grid had 1200 particles, the spring constants were sampled from a normal distribution with mean 0.0 and standard deviation 1.0. Step 0 is a stabilization of the initial grid, presented in \cref{fig:implementation:stabilizedInitial}, the following steps are the stabilization and breaking steps of the algorithm.}
+	\label{fig:experiment:stretchHighest}
+\end{figure*}
