--- a/report/results_highest.tex
+++ b/report/results_highest.tex
@@ -6,7 +6,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_0}
-	\caption{Step 0}
+	\caption{}
 	\label{fig:experiment:highestStrain:0}
 \end{subfigure}
 \begin{subfigure}{0.16\textwidth}
@@ -16,7 +16,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_1}
-	\caption{Step 1}
+	\caption{}
 	\label{fig:experiment:highestStrain:1}
 \end{subfigure}	
 \begin{subfigure}{0.16\textwidth}
@@ -26,7 +26,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_2}
-	\caption{Step 2}
+	\caption{}
 	\label{fig:experiment:highestStrain:2}
 \end{subfigure}		
 \begin{subfigure}{0.16\textwidth}
@@ -36,7 +36,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_3}
-	\caption{Step 3}
+	\caption{}
 	\label{fig:experiment:highestStrain:3}
 \end{subfigure}			
 \begin{subfigure}{0.16\textwidth}
@@ -46,7 +46,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_4}
-	\caption{Step 4}
+	\caption{}
 	\label{fig:experiment:highestStrain:4}
 \end{subfigure}				
 \begin{subfigure}{0.16\textwidth}
@@ -56,7 +56,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_5}
-	\caption{Step 5}
+	\caption{}
 	\label{fig:experiment:highestStrain:5}
 \end{subfigure}
 \begin{subfigure}{0.16\textwidth}
@@ -66,7 +66,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_6}
-	\caption{Step 6}
+	\caption{}
 	\label{fig:experiment:highestStrain:6}
 \end{subfigure}	
 \begin{subfigure}{0.16\textwidth}
@@ -76,7 +76,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_7}
-	\caption{Step 7}
+	\caption{}
 	\label{fig:experiment:highestStrain:7}
 \end{subfigure}		
 \begin{subfigure}{0.16\textwidth}
@@ -86,7 +86,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_8}
-	\caption{Step 8}
+	\caption{}
 	\label{fig:experiment:highestStrain:8}
 \end{subfigure}			
 \begin{subfigure}{0.16\textwidth}
@@ -96,7 +96,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_9}
-	\caption{Step 9}
+	\caption{}
 	\label{fig:experiment:highestStrain:9}
 \end{subfigure}					
 \begin{subfigure}{0.16\textwidth}
@@ -106,7 +106,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_10}
-	\caption{Step 10}
+	\caption{}
 	\label{fig:experiment:highestStrain:10}
 \end{subfigure}			
 \begin{subfigure}{0.16\textwidth}
@@ -116,6 +116,6 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_highest_97_step_11}
-	\caption{Step 11}
+	\caption{}
 	\label{fig:experiment:highestStrain:11}
 \end{subfigure}	
